--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -75,6 +75,26 @@
     }
   }
 
+/* research page buttons */
+&--pdf {
+  display: inline-block;
+  margin-bottom: 0.25em;
+  padding: 0.125em 0.25em;
+  color: $link-color;
+  text-align: center;
+  text-decoration: none !important;
+  border: 1px solid;
+  border-color: $link-color;
+  border-radius: $border-radius;
+  cursor: pointer;
+
+  &:hover {
+    color: #fff;
+    background-color: $link-color !important;
+  }
+}
+
+   
   /* warning */
 
   &--warning {
